SET(vtkflowvr-SRCS vtkFlowVRModule.cxx vtkFlowVRImageReader.cxx)

#
# Create the vtkFlowVR C++ library. 
#
ADD_LIBRARY(vtkFlowVR SHARED ${vtkflowvr-SRCS})
TARGET_LINK_LIBRARIES (vtkFlowVR vtkCommon vtkGraphics ${FLOWVR_base_LIBRARY} ${FLOWVR_mod_LIBRARY})
INSTALL(TARGETS vtkFlowVR DESTINATION ${LIB_DIR})
FILE(GLOB vtkflowvr-HEADERS "*.h")
INSTALL(FILES ${vtkflowvr-HEADERS} DESTINATION include/vtk-flowvr)

#
# Create the vtkFlowVR Tcl library. 
#
IF(VTK_LANGUAGES MATCHES "TCL" AND VTKFLOWVR_WRAP_TCL)
  INCLUDE(${VTK_CMAKE_DIR}/vtkWrapTcl.cmake)
  VTK_WRAP_TCL3(vtkFlowVRTCL vtkflowvrTCL-SRCS "${vtkflowvr-SRCS}" "")

  INCLUDE(FindTCL)
  MESSAGE(STATUS ${TCL_INCLUDE_PATH})
  INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
  
	ADD_LIBRARY(vtkFlowVRTCL SHARED ${vtkflowvrTCL-SRCS})
  TARGET_LINK_LIBRARIES(vtkFlowVRTCL vtkFlowVR vtkCommonTCL vtkGraphicsTCL)
  SET_SOURCE_FILES_PROPERTIES(${vtkflowvrTCL-SRCS} PROPERTIES GENERATED 1)
  INSTALL(TARGETS vtkFlowVRTCL DESTINATION ${LIB_DIR})
ENDIF (VTK_LANGUAGES MATCHES "TCL" AND VTKFLOWVR_WRAP_TCL)

#
# Create the vtkFlowVR Python library. 
#
IF (VTK_LANGUAGES MATCHES "PYTHON" AND VTKFLOWVR_WRAP_PYTHON)
  INCLUDE(${VTK_CMAKE_DIR}/vtkWrapPython.cmake)
  VTK_WRAP_PYTHON3(vtkFlowVRPython vtkflowvrPython-SRCS "${vtkflowvr-SRCS}" "")

	INCLUDE(FindPythonLibs)
	MESSAGE(STATUS ${PYTHON_INCLUDE_PATH})
	INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
	
  ADD_LIBRARY(vtkFlowVRPython SHARED ${vtkflowvrPython-SRCS})
  SET_SOURCE_FILES_PROPERTIES(${vtkflowvrPython-SRCS} PROPERTIES GENERATED 1)
  TARGET_LINK_LIBRARIES(vtkFlowVRPython vtkFlowVR vtkCommonPythonD vtkGraphicsPythonD)
  INSTALL(TARGETS vtkFlowVRPython DESTINATION ${LIB_DIR})
ENDIF (VTK_LANGUAGES MATCHES "PYTHON" AND VTKFLOWVR_WRAP_PYTHON)

#
# Create the vtkFlowVR Java library. 
#
#IF (VTK_LANGUAGES MATCHES "JAVA"  AND VTKFLOWVR_WRAP_JAVA)
#  INCLUDE(${VTK_CMAKE_DIR}/vtkWrapJava.cmake)
#  VTK_WRAP_JAVA3(vtkFlowVRJava vtkFlowVRJava-SRCS "${vtkflowvr-SRCS}" "")
#  ADD_LIBRARY(vtkFlowVRJava SHARED ${vtkFlowVRJava-SRCS})
#  TARGET_LINK_LIBRARIES(vtkFlowVRJava vtkFlowVR vtkCommonJava vtkGraphicsJava)
#  SET_SOURCE_FILES_PROPERTIES(${vtkFlowVR-SRCS} PROPERTIES GENERATED 1)
#  INSTALL(TARGETS vtkFlowVRJava DESTINATION ${LIB_DIR})
#ENDIF (VTK_LANGUAGES MATCHES "JAVA" AND VTKFLOWVR_WRAP_JAVA)
